force-app/main/default/objects/SeasonHittingStats__c/SeasonHittingStats__c.object-meta.xml
<CustomObject>
    <label>打者成績(シーズン)</label>
    <nameField>
        <label>打者成績No</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>