force-app/main/default/objects/SeasonHittingStats__c/fields/ab__c.field-meta.xml
<CustomField>
    <fullName>ab__c</fullName>
    <label>打数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>