force-app/main/default/objects/SeasonHittingStats__c/fields/ao__c.field-meta.xml
<CustomField>
    <fullName>ao__c</fullName>
    <label>フライアウト数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>