force-app/main/default/objects/SeasonHittingStats__c/fields/avg__c.field-meta.xml
<CustomField>
    <fullName>avg__c</fullName>
    <label>打率</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>