force-app/main/default/objects/SeasonHittingStats__c/fields/bb__c.field-meta.xml
<CustomField>
    <fullName>bb__c</fullName>
    <label>四球</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>