force-app/main/default/objects/SeasonHittingStats__c/fields/cs__c.field-meta.xml
<CustomField>
    <fullName>cs__c</fullName>
    <label>盗塁失敗数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>