force-app/main/default/objects/SeasonHittingStats__c/fields/go__c.field-meta.xml
<CustomField>
    <fullName>go__c</fullName>
    <label>ゴロ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>