force-app/main/default/objects/SeasonHittingStats__c/fields/go_ao__c.field-meta.xml
<CustomField>
    <fullName>go_ao__c</fullName>
    <inlineHelpText>ゴロ（GB）の総数をフライ（FB）の総数で割った数</inlineHelpText>
    <label>ゴロ/フライ比率</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>