force-app/main/default/objects/SeasonHittingStats__c/fields/h__c.field-meta.xml
<CustomField>
    <fullName>h__c</fullName>
    <label>安打</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>