force-app/main/default/objects/SeasonHittingStats__c/fields/hbp__c.field-meta.xml
<CustomField>
    <fullName>hbp__c</fullName>
    <label>死球</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>