force-app/main/default/objects/SeasonHittingStats__c/fields/hr__c.field-meta.xml
<CustomField>
    <fullName>hr__c</fullName>
    <label>本塁打数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>