force-app/main/default/objects/SeasonHittingStats__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <description>シーズン_playerId</description>
    <externalId>true</externalId>
    <label>キー</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>