force-app/main/default/objects/SeasonHittingStats__c/fields/league__c.field-meta.xml
<CustomField>
    <fullName>league__c</fullName>
    <label>リーグ名</label>
    <length>10</length>
    <type>Text</type>
</CustomField>