force-app/main/default/objects/SeasonHittingStats__c/fields/lob__c.field-meta.xml
<CustomField>
    <fullName>lob__c</fullName>
    <label>残塁</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>