force-app/main/default/objects/SeasonHittingStats__c/fields/np__c.field-meta.xml
<CustomField>
    <fullName>np__c</fullName>
    <inlineHelpText>打席中に相手投手が投げた投球数</inlineHelpText>
    <label>被投球数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>