force-app/main/default/objects/SeasonHittingStats__c/fields/obp__c.field-meta.xml
<CustomField>
    <fullName>obp__c</fullName>
    <label>出塁率</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>