force-app/main/default/objects/SeasonHittingStats__c/fields/ops__c.field-meta.xml
<CustomField>
    <fullName>ops__c</fullName>
    <description>出塁率＋長打率</description>
    <label>OPS</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>