force-app/main/default/objects/SeasonHittingStats__c/fields/player_id__c.field-meta.xml
<CustomField>
    <fullName>player_id__c</fullName>
    <label>選手</label>
    <referenceTo>player__c</referenceTo>
    <relationshipLabel>打者成績(シーズン)</relationshipLabel>
    <relationshipName>players_HittingStats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>