force-app/main/default/objects/SeasonHittingStats__c/fields/ppa__c.field-meta.xml
<CustomField>
    <fullName>ppa__c</fullName>
    <inlineHelpText>1打席あたりの被投球数</inlineHelpText>
    <label>P/PA</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>