force-app/main/default/objects/SeasonHittingStats__c/fields/R__c.field-meta.xml
<CustomField>
    <fullName>R__c</fullName>
    <label>得点</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>