force-app/main/default/objects/SeasonHittingStats__c/fields/rbi__c.field-meta.xml
<CustomField>
    <fullName>rbi__c</fullName>
    <label>打点</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>