force-app/main/default/objects/SeasonHittingStats__c/fields/sb__c.field-meta.xml
<CustomField>
    <fullName>sb__c</fullName>
    <label>盗塁</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>