force-app/main/default/objects/SeasonHittingStats__c/fields/sf__c.field-meta.xml
<CustomField>
    <fullName>sf__c</fullName>
    <label>犠牲フライ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>