force-app/main/default/objects/SeasonHittingStats__c/fields/slg__c.field-meta.xml
<CustomField>
    <fullName>slg__c</fullName>
    <inlineHelpText>長打率 = 塁打 ÷ 打数</inlineHelpText>
    <label>長打率</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>