force-app/main/default/objects/SeasonHittingStats__c/fields/tb__c.field-meta.xml
<CustomField>
    <fullName>tb__c</fullName>
    <label>塁打総数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>