force-app/main/default/objects/SeasonHittingStats__c/fields/team_abbrev__c.field-meta.xml
<CustomField>
    <fullName>team_abbrev__c</fullName>
    <label>チーム名</label>
    <length>10</length>
    <type>Text</type>
</CustomField>