force-app/main/default/objects/SeasonHittingStats__c/fields/tpa__c.field-meta.xml
<CustomField>
    <fullName>tpa__c</fullName>
    <label>総打席数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>