force-app/main/default/objects/SeasonHittingStats__c/fields/wo__c.field-meta.xml
<CustomField>
    <fullName>wo__c</fullName>
    <label>Walk Off</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>