force-app/main/default/objects/SeasonHittingStats__c/fields/xbh__c.field-meta.xml
<CustomField>
    <fullName>xbh__c</fullName>
    <inlineHelpText>２塁打＋３塁打＋本塁打を足した長打数</inlineHelpText>
    <label>長打数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>