force-app/main/default/objects/SeasonHittingStats__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>key__c</columns>
    <columns>player_id__c</columns>
    <columns>avg__c</columns>
    <columns>h__c</columns>
    <columns>hr__c</columns>
    <columns>rbi__c</columns>
    <columns>ops__c</columns>
    <columns>sb__c</columns>
    <columns>wo__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>